# hs-tartlet

./: README.md  Tartlet.cabal  makefile
app/: Main.hs
src/Core/: Context.hs  Eval.hs  Expression.hs  Quantity.hs  TypeChecker.hs
src/Core/Elab/: Eval.hs  Value.hs
src/Core/Eval/Elab/: Context.hs  Eval.hs  Value.hs
src/Core/Eval/EnvMachine/: Context.hs  Eval.hs  Value.hs
src/Core/Eval/MetaLang/: Context.hs  Eval.hs  Value.hs
src/Core/Parser/: Helper.hs  Parse.y  SrcLoc.hs  Token.x  Tokens.x
src/Core/Pretty/: Error.hs
