cabal-version:      3.0
category:           Languages
build-type:         Simple
name:               Tartlet
synopsis:           Implementation of Tartlet programming language
version:            0.1.0


executable repl


  main-is:
    Main.hs

  ghc-options:
    -threaded -rtsopts

  hs-source-dirs:
    app/

  build-depends:
      base
    , Core
    , ansi-terminal
        ^>= 0.9.1
    , haskeline
        ^>= 0.7.5.0
    , parsec
    , prettyprinter
    , prettyprinter-ansi-terminal
    , text
        ^>=1.2.3
    , transformers
        ^>= 0.5.6.2

Library Core

  ghc-options:
    -threaded
    -rtsopts
    -O2
    -fobject-code
    -Wall
    -Wincomplete-patterns

  hs-source-dirs:
    src/

  build-depends:
      base
    , array
    , bytestring
    , containers
        ^>= 0.6
    , parsec
    , lens
    , mtl
      ^>= 2.2.2
    , prettyprinter
    , prettyprinter-ansi-terminal    
    , text
      ^>=1.2.3
    , transformers
    , QuickCheck
        ^>= 2.13.2
    , text
        ^>=1.2.3


  exposed-modules:
      Core.Expression
      Core.Elab.Eval
      Core.Elab.Value
      Core.Parser.Parse
      Core.Parser.Token
      Core.Parser.Helper
      Core.Parser.SrcLoc
      Core.TypeChecker
      Core.TypeChecker.Judgement
      Core.Elab
      Core.CEK.Eval
      Core.Pretty.Expression
      Core.Pretty.Error
      -- Core.PrettyPrint

  default-language:
    Haskell2010


test-suite test

  main-is:
    Main.hs

  type:
    exitcode-stdio-1.0

  ghc-options:
    -threaded -with-rtsopts=-N

  hs-source-dirs:
    test/

  build-depends:
      Core
    , base
    , QuickCheck
        ^>= 2.13.2
    , tasty
        ^>= 1.2.3
    , tasty-hunit
        ^>= 0.10
    , tasty-quickcheck
        ^>= 0.10
    , text
        ^>=1.2.3
